tests/toy/neg/001668_mutation.toylang
program a = { while a then do sleep; } .
